k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: office-mb
  labels:
    app.kubernetes.io/part-of: office-mb
